crates/strider-analyze/tests/snapshots/mips32be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x4007f8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v13" [color="#888888", style=dashed];
  "v13" -> "11" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "11" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v16" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="arg[3] ← a3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← a2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "18" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x4007f8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "21" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "21" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "21" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "21" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "23" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "21" -> "23" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v25" [color="#888888", style=dashed];
  "v25" -> "23" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v26" [color="#888888", style=dashed];
  "v26" -> "23" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v27" [color="#888888", style=dashed];
  "v27" -> "23" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v28" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "21" -> "v28" [color="#888888", style=dashed];
  "v28" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
}
